--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,6 @@
         </div>
         <div class="navbar">
             <ul>
-                <div class="toggle"> <img src="../images/ph_list-bold.png" alt="toggle"></div>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#project">Project</a></li>
@@ -88,7 +87,7 @@
                     </div>
                     <div class="face face2">
                         <div class="content">
-                            <p>Kalian bisa explore di akun kedua instagram saya, disana banyak informasi tentang programming dan agama. Langsung aja klik tombol lihat di bawah ini</p>
+                            <p>Informasi tentang programming dan agama. Langsung aja klik tombol lihat di bawah ini</p>
                             <a href="https://www.instagram.com/naufall.for.task" target="_blank" type="button">Lihat</a>
                         </div>
                         </div>
@@ -104,7 +103,7 @@
                         </div>
                         <div class="face face2">
                             <div class="content">
-                                <p>Bikin Projek gak harus selalu serius, kadang kadang kalo gabut bikin projek yang random tapi tetep harus mikir, nih buat kalian kirim ke... kalian.</p>
+                                <p>Gabut bikin projek yang random tapi tetep harus mikir, nih buat kalian kirim ke.</p>
                                 <a href="https://github.com/abdFal/love-for-her" target="_blank" type="button">Lihat</a>
                             </div>
                         </div>
@@ -120,7 +119,7 @@
                     </div>
                     <div class="face face2">
                         <div class="content">
-                            <p>Kalo ini adalah Design UI UX Android App Yang saya buat, langsung aja kalian bisa mengunjungi akun dribbble saya, masih pemula sih jadi kita bisa sama sama sharing aja ya tentang UI UX Design Android </p>
+                            <p>Kalo ini adalah Design UI UX Android App Yang saya buat tentang UI UX Design Android </p>
                             <a href="https://dribbble.com/abdFal" target="_blank" type="button">Lihat</a>
                         </div>
                     </div>
@@ -135,7 +134,7 @@
                 </div>
                 <div class="face face2">
                     <div class="content">
-                        <p>Kalo ini adalah website sekolah saya yaitu IDN Boarding School Bogor, kalian bisa lihat semua tentang sekolah kami, sekolah pesantren berbasis IT. </p>
+                        <p>Kalo ini adalah website sekolah saya yaitu IDN Boarding School Bogor</p>
                         <a href="https://idn-boarding-school.abdillahnaufal1.repl.co/" target="_blank" type="button">Lihat</a>
                     </div>
                 </div>
