--- a/index.html
+++ b/index.html
@@ -204,17 +204,17 @@
                             <form action="#">
                                 <div class="fields">
                                     <div class="field name">
-                                        <input type="text" placeholder="Nama" required="" oninvalid="this.setCustomValidity('Isi dulu deks')" oninput="setCustomValidity('')">
+                                        <input type="text" placeholder="Nama" required="" oninvalid="this.setCustomValidity('Isi dulu kakak')" oninput="setCustomValidity('')">
                                     </div>
                                     <div class="field email">
                                         <input type="email" placeholder="Email" required="" oninput="setCustomValidity('')">
                                     </div>
                                 </div>
                                 <div class="field">
-                                    <input type="text" placeholder="Judul" required="" oninvalid="this.setCustomValidity('Isi dulu deks')" oninput="setCustomValidity('')">
+                                    <input type="text" placeholder="Judul" required="" oninvalid="this.setCustomValidity('Isi dulu kakak')" oninput="setCustomValidity('')">
                                 </div>
                                 <div class="field textarea">
-                                    <textarea cols="30" rows="10" required="" placeholder="Mau ngomongin apa ni?" oninvalid="this.setCustomValidity('Isi dulu deks')" oninput="setCustomValidity('')"></textarea>
+                                    <textarea cols="30" rows="10" required="" placeholder="Mau ngomongin apa ni?" oninvalid="this.setCustomValidity('Isi dulu kakak')" oninput="setCustomValidity('')"></textarea>
                                 </div>
                                 <div class="button">
                                     <button type="submit" onclick="kirim()">Kirim</button>
