--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                     <input type="text" placeholder="Judul" required="" oninvalid="this.setCustomValidity('Isi dulu kakak')" oninput="setCustomValidity('')">
                                 </div>
                                 <div class="field textarea">
-                                    <textarea cols="30" rows="10" required="" placeholder="Mau ngomongin apa ni?" oninvalid="this.setCustomValidity('Isi dulu kakak')" oninput="setCustomValidity('')"></textarea>
+                                    <textarea cols="30" rows="10" required="" placeholder="Mau ngomongin apa ni?" oninvalid="this.setCustomValidity('Isi dulu kaka')" oninput="setCustomValidity('')"></textarea>
                                 </div>
                                 <div class="button">
                                     <button type="submit" onclick="kirim()">Kirim</button>
