--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <i class="glyphicon glyphicon-user"></i>
                     <div class="about-content">
                         <div class="column left">
-                            <img src="/images/sss.png" alt="" >
+                            <img class="aaa" src="/images/sss.png" alt="" >
                         </div>
                         <div class="column right">
                             <div class="text">Halo Semuanya 👋</div>
