--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <i class="glyphicon glyphicon-user"></i>
                     <div class="about-content">
                         <div class="column left">
-                            <img src="/images/sss.png" alt="" >
+                            <img class="aaa" src="/images/sss.png" alt="" >
                         </div>
                         <div class="column right">
                             <div class="text">Halo Semuanya 👋</div>
@@ -172,7 +172,7 @@
                                     <i class="fa fa-user"></i>
                                     <div class="info">
                                         <div class="head">Name</div>
-                                        <div class="sub-title">Abdillah naufal lesmana</div>
+                                        <div class="sub-title">naufaldec07 @gmail.com</div>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -182,13 +182,7 @@
                                         <div class="sub-title">Bogor, Indonesia</div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <i class="fa fa-inbox"></i>
-                                    <div class="info">
-                                        <div class="head">Email</div>
-                                        <div class="sub-title">naufaldec07@gmail.com</div>
-                                    </div>
-                                </div>
+                                
                                 <div class="row">
                                     <a href="https://wa.me/087843951611?text=Halo! Salam Kenal" target="_blank"><i class="fa fa-phone"></i></a>
                                     <div class="info">
