--- a/index.html
+++ b/index.html
@@ -1,65 +1,87 @@
+<!-- created by naufaldec07 -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio</title>
-    <script src="sc.js"></script>
-    <link rel="stylesheet" href="stylee.css">
-    <link rel="icon" href="../images/Avatar-Profile-PNG-Photos.png" type="image/x-icon">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-<header>
-    <div class="header" data-aos="fade-up"
-    data-aos-duration="1100">
-        <div class="logo">
-            <h1>My</h1><span><h1>Portofolio <i class="fa fa-address-book-o" aria-hidden="true"></i></h1></span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Abdillah Naufal Lesmana</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="navbar-item">
+          <div class="logo">
+            <a href="#"><span class="my">My</span>Portofolio</a>
+          </div>
+          <ul class="menu">
+            <li><a href="#home" class="menu-btn">Home</a></li>
+            <li><a href="#about" class="menu-btn">About</a></li>
+            <li><a href="#skills" class="menu-btn">Skills</a></li>
+            <li><a href="#services" class="menu-btn">Project</a></li>
+            <li><a href="#contact" class="menu-btn">Contact</a></li>
+          </ul>
+          <div class="menu-btn">
+            <i class="fas fa-bars"></i>
+          </div>
         </div>
-        <div class="navbar">
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#project">Project</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+      </nav>
+
+      <!-- home section start -->
+      <section class="home" id="home">
+        <div class="header">
+            <div class="img-head">
+              <img src="/images/muka.png" width="93%" height="auto" alt="" />
+            </div>
+          <div class="max-width">
+            <div class="home-content">
+              <div class="text-1">Hello, my name is</div>
+              <div class="text-2">Abdillah Naufal Lesmana</div>
+              <div class="text-3">I'm a <span class="typing"></span></div>
+              <a href="/images/CV Update.jpg" download="">Download my CV</a>
+            </div>
+          </div>
         </div>
-    </div>
-</header>
-<!-- about section start -->
-<main>
-    <aside>
-        <div id="about"></div>
-            <section class="about" data-aos="fade-up"
-            data-aos-duration="1300" data-aos-delay="300">
-                <div class="max-width">
-                    <h2 class="title">Saya Abdillah Naufal Lesmana</h2>
-                    <i class="glyphicon glyphicon-user"></i>
-                    <div class="about-content">
-                        <div class="column left">
-                            <img class="aaa" src="/images/sss.png" alt="" >
-                        </div>
-                        <div class="column right">
-                            <div class="text">Halo Semuanya 👋</div>
-                            <p>Assalamualaikum semua, Perkenalkan Saya Abdillah Naufal Lesmana lahir di kota Jakarta dan sekarang berdomisili di kota Bogor. Saya adalah seorang pelajar di IDN Boarding School Bogor, Jawa Barat. Saya berusia 14 tahun, masih muda kan hehe, dan saya fokus untuk berkarir di bidang keahlian IT Web Development dan Android Development. <br>
-                            Saya senang memiliki banyak teman karena itu jangan lupa untuk saling menyapa.
-                            </p>
-                            <a href="#">
-                                <div></div>
-                                <div></div>
-                                <div></div>
-                                <div></div>
-                                Katakan Hallo!
-                            </a>
-                        </div>
+      </section>
+    </header>
+<!-- about section -->
+    <div id="about">
+        <article>
+            <section class="about">
+                <h2 class="about-title">About Me</h2>
+                <div class="about-content">
+                    <div class="about-img">
+                        <img src="/images/03c5f037-5343-4adb-9921-ba359bf0b625.jpg" width="100%" height="auto" alt="">
+                    </div>
+                    <div class="about-text">
+                        <h2>Halo Semuanya 👋</h2>
+                        <p>Saya Abdillah Naufal Lesmana lahir di kota Jakarta dan sekarang berdomisili di kota Bogor. Saya adalah seorang pelajar di IDN Boarding School Bogor, Jawa Barat. Saya berusia 14 tahun, masih muda kan hehe, dan saya fokus untuk berkarir di bidang keahlian IT Web Development dan Android Development. <br>
+                            Saya senang memiliki banyak teman karena itu jangan lupa untuk saling menyapa.</p>
+                            <div class="social">
+                                <ul>
+                                    <li id="ig"><i class="iconi fa fa-instagram" ></i>naufallsmn_</li>
+                                    <li id="link"><i class="iconi fa fa-linkedin" ></i>linkedin.com/in/naufallsmn</li>
+                                    <li id="git"><i class="iconi fa fa-github" ></i>github.com/abdFal</li>
+                                    
+                                </ul>
+                            </div>
                     </div>
                 </div>
             </section>
-    </aside>
-    
-    <!-- skills section  -->
+        </article>
+        </div>
+<!-- skills section  -->
     <div id="skills"></div>
         <article>
             <section class="skills">
@@ -160,7 +182,7 @@
      <div id="contact"></div>
         <article>
             <section class="contact">
-                <div class="max-width">
+                <div class="contact-item">
                     <h2 class="title">Kontak Saya</h2>
                     <div class="contact-content">
                         <div class="column left" data-aos="zoom-out-down" data-aos-delay="1000"
@@ -230,10 +252,9 @@
             <a href="https://www.youtube.com/channel/UCpat0_xRdyyZaSYBpfzUILg" target="_blank">youtube</a>
     </div>
     </footer>
-</body>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
+    <script src="script.js"></script>
+    <script>
     AOS.init();
 </script>
-
+  </body>
 </html>
