--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="about-text">
                         <h2>Halo Semuanya 👋</h2>
-                        <p>Saya Abdillah Naufal Lesmana lahir di kota Jakarta dan sekarang berdomisili di kota Bogor. Saya adalah seorang pelajar di IDN Boarding School Bogor, Jawa Barat. Saya berusia 14 tahun, masih muda kan hehe, dan saya fokus untuk berkarir di bidang keahlian IT Web Development dan Android Development. <br>
+                        <p>Saya Abdillah Naufal Lesmana lahir di kota Jakarta dan sekarang berdomisili di kota Bogor. Saya adalah seorang pelajar di IDN Boarding School Bogor, Jawa Barat. Saya berusia 15 tahun, masih muda kan hehe, dan saya fokus untuk berkarir di bidang keahlian IT Web Development dan Android Development. <br>
                             Saya senang memiliki banyak teman karena itu jangan lupa untuk saling menyapa.</p>
                             <div class="social">
                                 <ul>
@@ -173,8 +173,8 @@
             <div class="title">Certificate</div>
                 <div class="certificate-img">
                     <img src="/images/sertifikat_course_256_2555900_041022134445_page-0001.jpg" alt="">
-                    <img src="/images/Python Core.jpg" alt="">
-                    <img src="/images/Python Lanjutan Skilvul (1).jpg" alt="">
+                    <img src="/images/sertifikat_course_337_2555900_100123102217_page-0001.jpg" alt="">
+                    <img src="/images/sertifikat_course_315_2804440_200123113012_page-0001.jpg" alt="">
                 </div>
         </section>
     </article>
