--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abdillah Naufal Lesmana</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="js/jquery.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -252,7 +253,7 @@
             <a href="https://www.youtube.com/channel/UCpat0_xRdyyZaSYBpfzUILg" target="_blank">youtube</a>
     </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <script>
     AOS.init();
 </script>
