--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     />
     <link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
+    <!-- icon -->
+    <link rel="icon" href="/images/Avatar-Profile-PNG-Photos.png">
   </head>
+<!-- preloader -->
+  <div id="preloader">
+  <div class="loader"></div>
+</div>
+<!-- content -->
   <body>
     <header>
       <nav class="navbar">
