--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                         <div class="face face1">
                             <div class="content">
                                 <i class="fa fa-codepen"></i>            
-                            <h3>About IT Content</h3>
+                            <h3>Temperature Conversion Web</h3>
                         </div>
                     </div>
                     <div class="face face2">
                         <div class="content">
-                            <p>Informasi tentang programming dan agama. Langsung aja klik tombol lihat di bawah ini</p>
-                            <a href="https://www.instagram.com/naufall.for.task" target="_blank" type="button">Lihat</a>
+                            <p>Ini salah satu project kecil saya yaitu website konversi suhu celcius ke fahrenheit yang saya buat menggunakan Python</p>
+                            <a href="https://github.com/abdFal/Temperature-convertion" target="_blank" type="button">Lihat</a>
                         </div>
                         </div>
                     </div>
@@ -201,14 +201,14 @@
                                 <div class="row">
                                     <i class="fa fa-user"></i>
                                     <div class="info">
-                                        <div class="head">Name</div>
+                                        <div class="head">Email</div>
                                         <div class="sub-title">naufaldec07 @gmail.com</div>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <a href="https://www.google.co.id/maps/place/Perumahan+Citra+Indah+City/@-6.4398085,107.0471286,17z/data=!3m1!4b1!4m6!3m5!1s0x2e69bd8e76e2ff37:0xf4294b08f982b372!8m2!3d-6.4398138!4d107.0493173!16s%2Fg%2F11b75b_tfj" target="_blank"><i class="fa fa-map"></i></a>
+                                    <a href="https://www.google.co.id/maps/place/Perumahan+Citra+Indah+City/@-6.4398085,107.0471286,17z/data=!3m1!4b1!4m6!3m5!1s0x2e69bd8e76e2ff37:0xf4294b08f982b372!8m2!3d-6.4398138!4d107.0493173!16s%2Fg%2F11b75b_tfj" target="_blank"><i class="fa fa-address-book"></i></a>
                                     <div class="info">
-                                        <div class="head"> Address</div>
+                                        <div class="head">Alamat</div>
                                         <div class="sub-title">Bogor, Indonesia</div>
                                     </div>
                                 </div>
