--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
                     data-aos-offset="0" data-aos-duration="600">
                         <div class="face face1">
                             <div class="content">
-                                <i class="fa fa-heart"></i>               
-                                <h3>Love For You</h3>
+                                <i class="fa fa-angellist"></i>               
+                                <h3>Audi Website</h3>
                             </div>
                         </div>
                         <div class="face face2">
                             <div class="content">
-                                <p>Gabut bikin projek yang random tapi tetep harus mikir, nih buat kalian kirim ke.</p>
-                                <a href="https://github.com/abdFal/love-for-her" target="_blank" type="button">Lihat</a>
+                                <p>Ini adalah website perusahaan Audi yang saya buat dengan menggunakan HTML CSS Javascript dan framework Bootstrap 5</p>
+                                <a href="https://audi.abdillahnaufal1.repl.co/" target="_blank" type="button">Lihat</a>
                             </div>
                         </div>
                     </div>
