--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="face face2">
                             <div class="content">
                                 <p>Ini adalah website perusahaan Audi yang saya buat dengan menggunakan HTML CSS Javascript dan framework Bootstrap 5</p>
-                                <a href="https://audi.abdillahnaufal1.repl.co/" target="_blank" type="button">Lihat</a>
+                                <a href="https://audi-pamijahan.abdillahnaufal1.repl.co/" target="_blank" type="button">Lihat</a>
                             </div>
                         </div>
                     </div>
