--- a/index.html
+++ b/index.html
@@ -107,6 +107,21 @@
             <P class="projek-saya-after">yang saya buat</P>
             <section class="services" id="services">
                 <div class="container">
+                    <div class="card" data-aos="fade-down" data-aos-delay="800"
+                    data-aos-offset="0" data-aos-duration="600">
+                        <div class="face face1">
+                            <div class="content">
+                                <i class="fa fa-angellist"></i>               
+                                <h3>Audi Website</h3>
+                            </div>
+                        </div>
+                        <div class="face face2">
+                            <div class="content">
+                                <p>Ini adalah website perusahaan Audi yang saya buat dengan menggunakan HTML CSS Javascript dan framework Bootstrap 5</p>
+                                <a href="https://audi-pamijahan.abdillahnaufal1.repl.co/" target="_blank" type="button">lihat</a>
+                            </div>
+                        </div>
+                    </div>
                         <div class="card" data-aos="fade-down" data-aos-delay="800"
                         data-aos-offset="0" data-aos-duration="600">
                         <div class="face face1">
@@ -123,21 +138,6 @@
                         </div>
                     </div>
                     
-                    <div class="card" data-aos="fade-down" data-aos-delay="800"
-                    data-aos-offset="0" data-aos-duration="600">
-                        <div class="face face1">
-                            <div class="content">
-                                <i class="fa fa-angellist"></i>               
-                                <h3>Audi Website</h3>
-                            </div>
-                        </div>
-                        <div class="face face2">
-                            <div class="content">
-                                <p>Ini adalah website perusahaan Audi yang saya buat dengan menggunakan HTML CSS Javascript dan framework Bootstrap 5</p>
-                                <a href="https://audi-pamijahan.abdillahnaufal1.repl.co/" target="_blank" type="button">Lihat</a>
-                            </div>
-                        </div>
-                    </div>
                     
                     <div class="card" data-aos="fade-down" data-aos-delay="800"
                     data-aos-offset="0" data-aos-duration="600">
