--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <!-- home section start -->
       <section class="home" id="home">
         <div class="header">
-            <div class="img-head">
+            <div class="img-head" data-aos="fade-down" data-aos-delay="200">
               <img src="/images/muka.png" width="93%" height="auto" alt="" />
             </div>
           <div class="max-width">
-            <div class="home-content">
+            <div class="home-content" data-aos="fade-down" data-aos-delay="300">
               <div class="text-1">Hello, my name is</div>
               <div class="text-2">Abdillah Naufal Lesmana</div>
               <div class="text-3">I'm a <span class="typing"></span></div>
