--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="home" id="home">
           <div class="header">
             <div class="img-head" data-aos="fade-down" data-aos-delay="200">
-              <img src="/images/muka.png" width="93%" height="auto" alt="" />
+              <img src="/images/muka.png" width="100%" height="auto" alt="" />
             </div>
             <div class="max-width">
               <div
@@ -145,7 +145,7 @@
             data-aos-offset="0"
             data-aos-duration="700"
           />
-          <img class="skills-img2" src="/images/2.png" alt="" />
+          <img class="skills-img2" src="/images/2.png" alt="" width="80%" />
         </section>
       </article>
 
