--- a/index.html
+++ b/index.html
@@ -109,8 +109,15 @@
               <div class="about-img">
                 <img
                   src="/images/Picsart_23-01-01_16-29-16-119.jpg"
+                  class="img-a"
                   width="100%"
                   height="auto"
+                  alt=""
+                />
+                <img
+                  src="/images/IMG_20230101_163130_730.jpg"
+                  class="img-b"
+                  width="35%"
                   alt=""
                 />
               </div>
@@ -290,6 +297,17 @@
           </div>
         </section>
       </article>
+      <div id="testimonial"></div>
+      <div class="testimonial">
+        <div class="card">
+          <img src="/images/elon.jpg" />
+          <div class="testimonial-text">
+            <h2>ANL Has a good skill and experiences in his passion</h2>
+            <h3>~Elon Musk <span>CEO of SpaceX</span></h3>
+          </div>
+        </div>
+      </div>
+
       <!-- contact section start -->
       <div id="contact"></div>
       <article>
