--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script
@@ -35,11 +34,13 @@
     />
     <!-- icon -->
     <link rel="icon" href="/images/Avatar-Profile-PNG-Photos.png" />
+    <script src="/js/script.js"></script>
   </head>
   <!-- preloader -->
-  <div id="preloader">
-    <div class="loader"></div>
+  <div class="preloader">
+    <div class="preloader-text">ANL. <span>Portofolio</span></div>
   </div>
+
   <!-- content -->
   <body>
     <main>
@@ -47,7 +48,7 @@
         <nav class="navbar">
           <div class="navbar-item">
             <div class="logo">
-              <a href="#"><span class="my">ANL.</span>Portofolio</a>
+              <a href=""><span class="my">ANL.</span>Portofolio</a>
             </div>
             <ul class="menu">
               <li><a href="#home" class="menu-btn">Home</a></li>
@@ -75,7 +76,9 @@
           <div class="head-desc" data-aos="fade-up" data-aos-once="true">
             <div class="home-content">
               <div class="text-1">Hello, my name is</div>
-              <div class="text-2"><h3>Abdillah Naufal Lesmana</h3></div>
+              <div class="text-2">
+                <h3>Abdillah Naufal <span>Lesmana</span></h3>
+              </div>
               <div class="text-3">I'm a <span class="typing"></span></div>
               <a class="cv" href="/images/CV Update.jpg" download=""
                 >Download my CV</a
@@ -261,10 +264,10 @@
         <div class="project-description">
           <h1>Todo List App</h1>
           <p>
-            Ini adalah website perusahaan Audi yang saya buat dengan menggunakan
-            HTML CSS Javascript dan framework Bootstrap 5, disana terdapat
-            penjelasan dari mobil ikonik dari Audi yaitu Audi R8, layanan dari
-            Audi, dan juga Electric cars dari Audi USA.
+            Ini Merupakan aplikasi web yang saya buat menggunakan bahasa
+            pemrograman php native, dengan tampilan framework Bootstrap5.2,
+            kalian bisa membuat, mengedit, dan menghapus jadwal sesuatu yang
+            kalian ingin lakukan
           </p>
           <!-- HTML !-->
           <a href="https://github.com/abdFal/Todo-List-App" target="_blank"
