--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
       rel="stylesheet"
     />
     <!-- icon -->
-    <link rel="icon" href="/images/Avatar-Profile-PNG-Photos.png" />
+    <link rel="icon" href="/images/Logo.png" />
     <script src="/js/script.js"></script>
   </head>
   <!-- preloader -->
   <div class="preloader">
-    <div class="preloader-text">ANL. <span>Portofolio</span></div>
+    <div class="preloader-text">
+      ANL. <span class="span-load">Portofolio</span>
+    </div>
   </div>
 
   <!-- content -->
