--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script
+      src="./node_modules/luxy.js/src/js/luxy.js"
+      charset="utf-8"
+    ></script>
     <script
       src="https://kit.fontawesome.com/b2c7ef89be.js"
       crossorigin="anonymous"
@@ -45,23 +47,23 @@
 
   <!-- content -->
   <body>
-    <main>
-      <header>
-        <nav class="navbar">
-          <div class="navbar-item">
-            <div class="logo">
-              <a href=""><span class="my">ANL.</span>Portofolio</a>
-            </div>
-            <ul class="menu">
-              <li><a href="#home" class="menu-btn">Home</a></li>
-              <li><a href="#about" class="menu-btn">About</a></li>
-              <li><a href="#skills" class="menu-btn">Skills</a></li>
-              <li><a href="#project" class="menu-btn">Project</a></li>
-              <li><a href="#contact" class="menu-btn">Contact</a></li>
-            </ul>
+    <header>
+      <nav class="navbar">
+        <div class="navbar-item">
+          <div class="logo">
+            <a href=""><span class="my">ANL.</span>Portofolio</a>
           </div>
-        </nav>
-      </header>
+          <ul class="menu">
+            <li><a href="#home" class="menu-btn">Home</a></li>
+            <li><a href="#about" class="menu-btn">About</a></li>
+            <li><a href="#skills" class="menu-btn">Skills</a></li>
+            <li><a href="#project" class="menu-btn">Project</a></li>
+            <li><a href="#contact" class="menu-btn">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main id="luxy" data-speed-y="0.5">
       <!-- home section start -->
       <section class="home" id="home">
         <div class="header">
@@ -81,10 +83,10 @@
               <div class="text-2">
                 <h3>Abdillah Naufal <span>Lesmana</span></h3>
               </div>
-              <div class="text-3">I'm a <span class="typing"></span></div>
-              <a class="cv" href="/images/CV Update.jpg" download=""
-                >Download my CV</a
-              >
+              <div class="text-3">
+                I'm a <span class="typing">Software Developer</span>
+              </div>
+              <a class="cv" href="/images/CV.jpg" download="">Download my CV</a>
               <div class="mysocial">
                 <a href="https://linkedin.com/in/naufallsmn"
                   ><i class="fa-brands fa-linkedin"></i
@@ -104,7 +106,6 @@
           </div>
         </div>
       </section>
-
       <!-- about section -->
       <div id="about">
         <article>
@@ -421,30 +422,31 @@
           </div>
         </section>
       </article>
+      <!-- HTML !-->
+      <!-- footer section start -->
+      <footer>
+        <span
+          >Dibuat Oleh
+          <a href="https://www.linkedin.com/in/abdillahnaufal" target="_blank"
+            >abdillahnaufal</a
+          >
+          | <span class="fa fa-copyright"></span> 2022 All rights
+          reserved.</span
+        >
+        <br />
+        <div class="linker">
+          <a href="https://www.instagram.com/naufallsmn_" target="_blank"
+            >instagram</a
+          >
+          <a href="http://www.github.com/abdFal" target="_blank">github</a>
+          <a
+            href="https://www.youtube.com/channel/UCpat0_xRdyyZaSYBpfzUILg"
+            target="_blank"
+            >youtube</a
+          >
+        </div>
+      </footer>
     </main>
-    <!-- HTML !-->
-    <!-- footer section start -->
-    <footer>
-      <span
-        >Dibuat Oleh
-        <a href="https://www.linkedin.com/in/abdillahnaufal" target="_blank"
-          >abdillahnaufal</a
-        >
-        | <span class="fa fa-copyright"></span> 2022 All rights reserved.</span
-      >
-      <br />
-      <div class="linker">
-        <a href="https://www.instagram.com/naufallsmn_" target="_blank"
-          >instagram</a
-        >
-        <a href="http://www.github.com/abdFal" target="_blank">github</a>
-        <a
-          href="https://www.youtube.com/channel/UCpat0_xRdyyZaSYBpfzUILg"
-          target="_blank"
-          >youtube</a
-        >
-      </div>
-    </footer>
     <script src="js/script.js"></script>
     <script src="js/form.js"></script>
     <script src="js/anime.js" type="module"></script>
@@ -456,6 +458,9 @@
     </script>
     <script>
       AOS.init();
+    </script>
+    <script charset="utf-8">
+      luxy.init();
     </script>
   </body>
   <script src="https://unpkg.com/kursor"></script>
