--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@
     <script src="js/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css" />
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <script
-      src="./node_modules/luxy.js/src/js/luxy.js"
-      charset="utf-8"
-    ></script>
+    <script src="node_modules/luxy.js/src/js/luxy.js" charset="utf-8"></script>
     <script
       src="https://kit.fontawesome.com/b2c7ef89be.js"
       crossorigin="anonymous"
@@ -25,10 +20,6 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     />
     <link
       href="https://fonts.googleapis.com/css?family=League Spartan"
