--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Abdillah Naufal Lesmana</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="node_modules/luxy.js/dist/js/luxy.js" charset="utf-8"></script>
     <script src="js/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="node_modules/luxy.js/src/js/luxy.js" charset="utf-8"></script>
     <script
       src="https://kit.fontawesome.com/b2c7ef89be.js"
       crossorigin="anonymous"
@@ -54,7 +54,7 @@
         </div>
       </nav>
     </header>
-    <main id="luxy" data-speed-y="0.5">
+    <main id="luxy" data-speed-y="1">
       <!-- home section start -->
       <section class="home" id="home">
         <div class="header">
@@ -442,6 +442,7 @@
     <script src="js/form.js"></script>
     <script src="js/anime.js" type="module"></script>
     <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <script src="node_modules/luxy.js/dist/js/luxy.js" charset="utf-8"></script>
     <script>
       (function () {
         emailjs.init("iSpIqR58C30ehPrAg");
