--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Abdillah Naufal Lesmana</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="node_modules/luxy.js/dist/js/luxy.js" charset="utf-8"></script>
     <script src="js/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
+    <script src="node_modules/luxy.js/dist/js/luxy.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -26,13 +26,19 @@
       rel="stylesheet"
     />
     <!-- icon -->
-    <link rel="icon" href="/images/Logo.png" />
-    <script src="/js/script.js"></script>
+    <link rel="icon" href="images/Logo.png" />
+    <script src="js/script.js"></script>
   </head>
   <!-- preloader -->
-  <div class="preloader">
-    <div class="preloader-text">
-      ANL. <span class="span-load">Portofolio</span>
+  <div class="center-body">
+    <div>
+      <svg class="loader-circle-64" viewbox="0 0 100 100">
+        <g class="points">
+          <circle class="crc c1" cx="50" cy="50" r="50" fill="#fff" />
+          <circle class="crc ci2" cx="5" cy="50" r="4" />
+          <circle class="crc ci1" cx="95" cy="50" r="4" />
+        </g>
+      </svg>
     </div>
   </div>
 
@@ -442,7 +448,7 @@
     <script src="js/form.js"></script>
     <script src="js/anime.js" type="module"></script>
     <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <script src="node_modules/luxy.js/dist/js/luxy.js" charset="utf-8"></script>
+    <script src="node_modules/luxy.js/dist/js/luxy.js"></script>
     <script>
       (function () {
         emailjs.init("iSpIqR58C30ehPrAg");
@@ -452,7 +458,10 @@
       AOS.init();
     </script>
     <script charset="utf-8">
-      luxy.init();
+      luxy.init({
+        wrapper: "#luxy",
+        wrapperSpeed: 0.08,
+      });
     </script>
   </body>
   <script src="https://unpkg.com/kursor"></script>
